fixing styling issues with the search bar

--- a/client/src/containers/explore/searchcontent/Autocomplete.css
+++ b/client/src/containers/explore/searchcontent/Autocomplete.css
@@ -31,6 +31,12 @@
     background-color: rgba(112, 128, 144, 0);
     color: white;
   } */
+
+  input:focus {
+      border: 'none';
+      outline: none;
+
+  }
   
   .pos-rel {
     position: relative;
