--- a/client/src/containers/explore/searchcontent/Autocomplete.css
+++ b/client/src/containers/explore/searchcontent/Autocomplete.css
@@ -63,6 +63,8 @@
     justify-content: space-between;
     width: 500px;
     padding: 5px;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
   
   .option,
